Modificacion de menu y camino de migas

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -97,7 +97,7 @@
                     <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">
-                        <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
+                        <p:menuitem value="Gestionar Usuarios" url="#{siteUrls.gestionUsuarios}" />
                         <p:menuitem value="Bitácora" url="#{siteUrls.bitacora}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Catálogos">
@@ -113,7 +113,7 @@
                 <pr:menu >
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">
-                        <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
+                        <p:menuitem value="Gestionar Usuarios" url="#{siteUrls.gestionUsuarios}" />
                         <p:menuitem value="Bitácora" url="#{siteUrls.bitacora}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Año Escolar">
@@ -144,7 +144,7 @@
                 <pr:menu >                    
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">
-                        <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
+                        <p:menuitem value="Gestionar Usuarios" url="#{siteUrls.gestionUsuarios}" />
                         <p:menuitem value="Bitácora" url="#{siteUrls.bitacora}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Año Escolar">
