mensaje de expiracion de contraseña a 90 dias y recordatorio a 10 dias, correccion de pantalla de cambio de contraseña y se agregaron validaciones

--- a/SIENI/SIENI-web/src/main/webapp/password.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/password.xhtml
@@ -3,33 +3,48 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/WEB-INF/template.xhtml">
+                template="/WEB-INF/template.xhtml"
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
+            <p:menuitem value="Cambio de contraseña" url="#"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
         <h:form>
-            <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
-                <p:outputLabel for="mod_pass0" value="Antigua contraseña: " class="Responsive"></p:outputLabel>
-                <p:password id="mod_pass0" value="#{mntoUsuariosController.usuarioModPass.pass0}" ></p:password>
-                <p:outputLabel for="mod_pass1" value="Contraseña: " class="Responsive"></p:outputLabel>
-                <p:password id="mod_pass1" value="#{mntoUsuariosController.usuarioModPass.pass1}" match="mod_pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta" requiredMessage="Debe ingresar una contraseña"></p:password>
-                <p:outputLabel for="mod_pass2" value="Repetir Contraseña: " class="Responsive"></p:outputLabel>
-                <p:password id="mod_pass2" value="#{mntoUsuariosController.usuarioModPass.pass2}" ></p:password>
-            </p:panelGrid>
-            <div class="EmptyBox20"></div>
-            <div class="Container100 Responsive">
-                <p:commandButton value="Guardar" action="#{mntoUsuariosController.guardarModPassword()}" update="mod_p1"/>
-                <p:commandButton value="Limpiar" immediate="true">
-                    <p:ajax update="mod_p1" resetValues="true" />
-                </p:commandButton>
-                <p:commandButton value="Cancelar" immediate="true">
-                    <p:ajax update="mod_p1" resetValues="true" listener="#{mntoUsuariosController.setIndexMenu(0)}"/>
-                </p:commandButton>
-            </div>
+            <p:panel>
+
+                <c:choose>
+                    <c:when test="#{loginController.dias >= '0'}">
+                        <p:dialog widgetVar="dlgContra" closable="false" visible="true" modal="true">
+                            <p:panelGrid columns="1">
+                                <p:outputLabel value="Su contraseña ha expirado">
+                                </p:outputLabel>
+                                <p:commandButton value="Continuar" action="#{loginController.setPedirContrasenia(false)}" immediate="true" oncomplete="PF('dlgContra').hide()" class="Container100">
+                                </p:commandButton>
+                            </p:panelGrid>
+                        </p:dialog>
+                    </c:when>
+                </c:choose>
+                <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
+                    <p:outputLabel for="mod_pass0" value="Contraseña Anterior: " class="Responsive"></p:outputLabel>
+                    <p:password id="mod_pass0" value="#{mntoUsuariosController.usuarioModPass.pass0}" ></p:password>
+                    <p:outputLabel for="pass1" value="Contraseña: " class="  Responsive"></p:outputLabel>
+                    <p:password id="pass1" value="#{mntoUsuariosController.usuarioModPass.pass1}" maxlength="30" match="pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta"  required="true" requiredMessage="Debe ingresar una contraseña" promptLabel="Digite una contraseña" validatorMessage="Contraseña no coincide"></p:password>
+                    <p:outputLabel for="pass2" value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
+                    <p:password id="pass2" value="#{mntoUsuariosController.usuarioModPass.pass2}" maxlength="30" ></p:password>
+                </p:panelGrid>
+                <div class="EmptyBox20"></div>
+                <div class="Container100 Responsive">
+                    <p:commandButton value="Guardar" action="#{mntoUsuariosController.guardarModPassword()}" update="mod_p1"/>
+                    <p:commandButton value="Limpiar" immediate="true">
+                        <p:ajax update="mod_p1" resetValues="true" />
+                    </p:commandButton>
+                </div>
+                <div class="EmptyBox20"></div>
+            </p:panel>
         </h:form>
     </ui:define>
 </ui:composition>
