--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -3,7 +3,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <f:view locale="es">
         <h:head> 
             <f:facet name="first">
@@ -26,7 +27,28 @@
             <p:socket onMessage="agrandar" channel="/notifyNotice"   >
                 <p:ajax event="message"  />
             </p:socket>
-
+            <h:form>
+<!--                <p:dialog visible="true">
+                    #{loginController.dias}
+                    #{loginController.pedirContrasenia}
+                </p:dialog>-->
+                <p:panel id="contraUs">
+                    <c:choose>
+                        <c:when test="#{-loginController.dias > '0' and loginController.dias >= '-10' and loginController.pedirContrasenia}">
+                            <p:dialog widgetVar="dlgContra" closable="true" visible="true" modal="true">
+                                <p:panelGrid columns="1">
+                                    <p:outputLabel value="Su contraseña expira en #{-loginController.dias} dias">
+                                    </p:outputLabel>
+                                    <p:commandButton value="Cambiar Contraseña" action="#{loginController.cambiarPass()}" class="Container100">
+                                    </p:commandButton>
+                                    <p:commandButton value="Continuar" action="#{loginController.setPedirContrasenia(false)}" oncomplete="PF('dlgContra').hide()" class="Container100">
+                                    </p:commandButton>
+                                </p:panelGrid>
+                            </p:dialog>
+                        </c:when>
+                    </c:choose>
+                </p:panel>
+            </h:form>
 
 
             <style type="text/css">
@@ -115,7 +137,7 @@
                 .ui-growl-message .ui-growl-title{
                     color: white
                 }
-                
+
             </style>
             <div style="font-family: serif;">
                 <script type="text/javascript">
