--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -25,7 +25,7 @@
         <h:body>
 
             <p:socket onMessage="handleMessage" channel="/notifyNotice"   >
-                <p:ajax event="agrandar(2)"  />
+                <!-- <p:ajax event="agrandar"  /> -->
             </p:socket>
             
             <script type="text/javascript">
