--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
@@ -18,7 +18,7 @@
 
         <ul id="top-menu" class="ShowOnDesktop">
             <li>
-                <a class="ripplelink"><i class="icon-notifications1"> <span class="burbuja">1</span> </i> </a>
+                <a class="ripplelink"><i class="icon-notifications1"> <span class="burbuja">#{notificacionesController.count}</span> </i> </a>
                 <ul>
                     <li><a href="#{copiaArchivos.contexto}#{siteUrls.buzonNotificacion}"> Ver Notificaciones </a></li>
                 </ul>
