--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -281,7 +281,7 @@
                         <p:ajax event="idle" listener="#{loginController.onIdle}" update="messages" />
                     </p:idleMonitor>
                     <p:remoteCommand name="updatemessages" update="messages"></p:remoteCommand>
-                    <p:growl sticky="true" id="messages" autoUpdate="true">
+                    <p:growl sticky="true" id="messages" autoUpdate="true" showDetail="true">
                         <h:outputScript>
                             $("#g\\:messages_container").effect("pulsate", { times:3 }, 2000);
                         </h:outputScript>
