modificacion y correccion de bugs

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -106,6 +106,7 @@
                         <p:menuitem value="Grados" url="#{siteUrls.catGrado}" />
                         <p:menuitem value="Secciones" url="#{siteUrls.catSeccion}"/>
                     </p:submenu>
+                    <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
                     <p:separator />
                 </pr:menu>
             </c:if>
