correcciones y se agrego reporte de notas modificadas

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -115,6 +115,7 @@
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">                        
                         <p:menuitem value="Bitácora" url="#{siteUrls.bitacora}" />
+                        <p:menuitem value="Reporte de Notas Modificadas" url="#{siteUrls.reporteNotasModificadas}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Año Escolar">
                         <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
@@ -145,6 +146,7 @@
                     <p:submenu label="Administración de Sistema">
                         <p:menuitem value="Gestionar Usuarios" url="#{siteUrls.gestionUsuarios}" />
                         <p:menuitem value="Bitácora" url="#{siteUrls.bitacora}" />
+                        <p:menuitem value="Reporte de Notas Modificadas" url="#{siteUrls.reporteNotasModificadas}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Año Escolar">
                         <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
