Correccion de bugs

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -39,7 +39,7 @@
                             <p:menuitem icon="icon-circumference" value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
                             <p:menuitem icon="icon-circumference" value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
                             <p:menuitem icon="icon-circumference" value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
-                            <p:menuitem icon="icon-circumference" value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
+                            <p:menuitem icon="icon-circumference" value="Editor Matemático" url="#{siteUrls.ejerciciosResueltos}" />
                         </p:submenu>
                         <p:menuitem icon="icon-check52" value="Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
                         <p:menuitem icon="icon-check52" value="Notas" url="#{siteUrls.gestionNota}" />
@@ -66,7 +66,7 @@
                             <p:menuitem icon="icon-circumference" value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
                             <p:menuitem icon="icon-circumference" value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
                             <p:menuitem icon="icon-circumference" value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
-                            <p:menuitem icon="icon-circumference" value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
+                            <p:menuitem icon="icon-circumference" value="Editor Matemático" url="#{siteUrls.ejerciciosResueltos}" />
                         </p:submenu>
                         <p:menuitem icon="icon-check52" value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
                         <p:menuitem icon="icon-check52" value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
