--- a/SIENI/SIENI-web/src/main/webapp/resetPass.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/resetPass.xhtml
@@ -28,7 +28,7 @@
                     <div class="Card ShadowEffect">
                         <div class="EmptyBox20"></div>
                         <div class="Wid100 OvHidden BigTopic Fs30"><i class="icon-users Fs40"></i>Bienvenido a SIENI</div>
-                        <div class="Wid100 OvHidden Fs20">Login</div>
+                        <div class="Wid100 OvHidden Fs20">Reestablecer contraseña</div>
                         <div class="EmptyBox20"></div> 
                         <div class="Wid100">
                             <h:panelGrid columns="2" class="Wid100">
