--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -277,7 +277,7 @@
                     </div>
                 </div>
                 <h:form id="g">
-                    <p:idleMonitor timeout="1800000">
+                    <p:idleMonitor timeout="600000">
                         <p:ajax event="idle" listener="#{loginController.onIdle}" update="messages" />
                     </p:idleMonitor>
                     <p:remoteCommand name="updatemessages" update="messages"></p:remoteCommand>
