--- a/SIENI/SIENI-web/src/main/webapp/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/index.xhtml
@@ -10,9 +10,10 @@
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
-         <p:socket onMessage="handleMessage" channel="/notifyNotice"    >
-                <p:ajax  event="message" onstart="agrandar(#{notificacionesController.count});" /> 
-          </p:socket>
+         
+        <p:socket onMessage="handleMessage" channel="/notify" >
+            <p:ajax event="message" listener="#{notificacionesController.obtenerNotifyUsuario()}" oncomplete ="notificar(#{notificacionesController.count})" />
+        </p:socket>
 
         <p:panel class="Container100">
             <p:outputLabel class="h2 TexAlCenter">Bienvenido #{aperturaAnioEscolarForm.anio}</p:outputLabel>
