correccion de bug

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -114,7 +114,7 @@
             <c:if test="#{loginController.tipoRol=='3'}">
                 <pr:menu >                    
                     <p:menuitem icon="icon-add" value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
-                    <p:submenu label="Administración de Sistema">                        
+                    <p:submenu icon="icon-add" label="Administración de Sistema">                        
                         <p:menuitem icon="icon-check52" value="Bitácora" url="#{siteUrls.bitacora}" />
                         <p:menuitem icon="icon-check52" value="Reporte de Notas Modificadas" url="#{siteUrls.reporteNotasModificadas}" />
                     </p:submenu>
